--- a/pom.xml
+++ b/pom.xml
@@ -256,8 +256,8 @@
     </scm>
 
     <properties>
-        <ballerina.lang.version>1.1.0-SNAPSHOT</ballerina.lang.version>
-        <ballerina.source.directory>${project.build.directory}/../src/main/ballerina</ballerina.source.directory>
+        <ballerina.lang.version>1.0.4</ballerina.lang.version>
+        <ballerina.source.directory>/home/uvindu/IdeaProjects/../src/main/ballerina</ballerina.source.directory>
         <com.fasterxml.jackson.core.annotations.version>2.9.8</com.fasterxml.jackson.core.annotations.version>
         <com.fasterxml.jackson.dataformat.yaml.version>2.9.8</com.fasterxml.jackson.dataformat.yaml.version>
         <commons.codec.version>1.12</commons.codec.version>
